crates/mlcg/tests/ui/mixed_processor_labels.stderr
error[E0308]: mismatched types
 --> tests/ui/mixed_processor_labels.rs:8:33
  |
8 |     accepts_same(first.label(), second.label());
  |     ------------                ^^^^^^^^^^^^^^ expected `main::MlcgProcessorMarker`, found a different `main::MlcgProcessorMarker`
  |     |
  |     arguments to this function are incorrect
  |
  = note: expected struct `mlcg::prelude::Label<main::MlcgProcessorMarker>`
             found struct `mlcg::prelude::Label<main::MlcgProcessorMarker>`
note: function defined here
 --> tests/ui/mixed_processor_labels.rs:3:4
  |
3 | fn accepts_same<P>(_: Label<P>, _: Label<P>) {}
  |    ^^^^^^^^^^^^                 -----------
